src/objects/Inventory_Order__c.object
<CustomObject>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Order_Cost__c</fullName>
        <label>Total Order Cost</label>
        <summarizedField>Inventory__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Inventory__c.Inventory_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Inventory Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INO-{0000}</displayFormat>
        <label>Inventory Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>